Second page with routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,49 +1,1 @@
-<form class="form-container" #userForm="ngForm">
-  <mat-form-field appearance="fill" class="full-width">
-
-    <mat-label>Full Name</mat-label>
-    <input matInput name="fullName" ngModel required />
-  </mat-form-field>
-
-  <mat-form-field appearance="fill" class="full-width">
-    <mat-label>Email</mat-label>
-    <input matInput type="email" name="email" ngModel required />
-  </mat-form-field>
-
-  <mat-form-field appearance="fill" class="full-width">
-    <mat-label>Password</mat-label>
-    <input matInput type="password" name="password" ngModel required />
-  </mat-form-field>
-
-  <label>Gender:</label>
-  <mat-radio-group name="gender"  [(ngModel)]="gender">
-    <mat-radio-button value="male">Male</mat-radio-button>
-    <mat-radio-button value="female">Female</mat-radio-button>
-    <mat-radio-button value="other">Other</mat-radio-button>
-  </mat-radio-group>
-   
-   
-
-  <mat-form-field appearance="fill" class="full-width">
-    <mat-label>Date of Birth</mat-label>
-    <input matInput [matDatepicker]="picker" name="dob" ngModel required />
-    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-datepicker #picker></mat-datepicker>
-  </mat-form-field>
-
-  <label>Skills:</label><br />
-  <mat-checkbox name="angular" [(ngModel)]="skills.angular">Angular</mat-checkbox>
-  <mat-checkbox name="react" [(ngModel)]="skills.react">React</mat-checkbox>
-  <mat-checkbox name="node" [(ngModel)]="skills.node">Node.js</mat-checkbox>
-
-  <mat-form-field appearance="fill" class="full-width">
-    <mat-label>Country</mat-label>
-    <mat-select name="country" ngModel required>
-      <mat-option value="india">India</mat-option>
-      <mat-option value="usa">USA</mat-option>
-      <mat-option value="japan">Japan</mat-option>
-    </mat-select>
-  </mat-form-field>
-
-  <button mat-raised-button color="primary" type="submit">Submit</button>
-</form>
+<router-outlet></router-outlet>
